examples/traefik-example/yaml/2-setup-apps/1-traefik-adminui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-adminui-svc
  namespace: kube-system
spec:
  selector:
    podLabel: traefik-ingress-pod-label
  ports:
    - name: tr-adminui-port
      port: 80
      targetPort: 8080
