examples/traefik-example/yaml/2-setup-apps/2-traefik-adminui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-adminui-ingress
  namespace: kube-system
spec:
  rules:
    - host: traefik-adminui.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-adminui-svc
              servicePort: tr-adminui-port
