examples/traefik-example/yaml/2-setup-apps/6-apphub-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apphub-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: apphub.minikube
      http:
        paths:
          - path: /app1
            backend:
              serviceName: app1-svc
              servicePort: app1-svc-port
          - path: /app2
            backend:
              serviceName: app2-svc
              servicePort: app2-svc-port
          - path: /app3
            backend:
              serviceName: app3-svc
              servicePort: app3-svc-port
